<resources>

    <!-- App -->
    <string name="rss_app_name">ResearchStack</string>

    <!-- Study Overview -->
    <string name="rss_send_email">Send Email</string>
    <string name="rss_study_overview_email_subject">%1$s Consent Form</string>
    <string name="rss_join_study">Join The Study</string>
    <string name="rss_read_consent_doc">Read consent document</string>
    <string name="rss_email_consent_doc">Email consent Document</string>
    <string name="rss_swipe_to_preview">Swipe to preview</string>
    <string name="rss_already_participating">Already Participating?</string>

    <!-- Consent -->
    <string name="rss_start_consent_button">Start</string>

    <!-- Quiz -->
    <string name="rss_quiz">Quiz</string>
    <string name="rss_quiz_evaluation">Quiz Evaluation</string>
    <string name="rss_quiz_evaluation_try_again">Try Again</string>
    <string name="rss_quiz_evaluation_review_consent">Review Consent</string>
    <string name="rss_quiz_evaluation_retake">Retake Quiz</string>
    <string name="rss_quiz_evaluation_great_job">Great Job!</string>

    <!-- Activities -->
    <string name="rss_activities">Activities</string>

    <!-- Dashboard -->
    <string name="rss_dashboard">Dashboard</string>

    <!-- Learn -->
    <string name="rss_learn">Learn</string>

    <!-- Profile -->
    <string name="rss_profile">Profile</string>
    <string name="rss_name">Name</string>
    <string name="rss_email">Email</string>
    <string name="rss_biological_sex">Biological Sex</string>
    <string name="rss_birthdate">Birthdate</string>
    <string name="rss_height">Height</string>
    <string name="rss_weight">Weight</string>

    <!-- Settings -->
    <string name="rss_settings">Settings</string>

    <string name="rss_settings_profile">Profile</string>
    <string name="rss_settings_profile_name">Name</string>
    <string name="rss_settings_profile_birthdate">Birthdate</string>

    <string name="rss_settings_reminders">Reminders</string>
    <string name="rss_settings_reminders_time">Reminder Time</string>

    <string name="rss_settings_privacy">Privacy</string>
    <string name="rss_settings_privacy_sharing_options">Sharing Options</string>
    <string name="rss_settings_privacy_sharing_options_ph">Share with ...</string>
    <string name="rss_settings_privacy_review_consent">Review consent document</string>
    <string name="rss_settings_privacy_policy">Privacy policy</string>

    <string name="rss_settings_security">Security</string>
    <string name="rss_settings_security_auto_lock">Auto-Lock on exit</string>
    <string name="rss_settings_security_auto_lock_summary">App will automatically lock</string>
    <string name="rss_settings_security_auto_lock_time">Auto-Lock time</string>
    <string name="rss_settings_security_auto_lock_time_summary">The time it takes for auto-lock to
        trigger
    </string>
    <string name="rss_settings_security_auto_lock_time_default">1</string>
    <string name="rss_settings_security_change_passcode">Change passcode</string>

    <string name="rss_settings_general">General</string>
    <string name="rss_settings_general_software_notices">Software Notices</string>
    <string name="rss_settings_general_leave_study">Leave Study</string>
    <string name="rss_settings_general_join_study">Join Study</string>
    <string name="rss_consent_withdraw_failed">Failed to Withdraw</string>
    <string name="rss_consent_withdraw_success">Consent Withdrawn</string>

    <string name="rss_settings_permissions">Permissions</string>
    <string name="rss_settings_review_consent">Review Consent</string>
    <string name="rss_settings_version">Build number %1$s (%2$s)</string>

    <!-- Steps -->
    <string name="rss_step_skip">Skip this question</string>
    <string name="rss_next">next</string>
    <string name="rss_format_step_title">Step %1$s of %2$s</string>
    <string name="rss_please_complete_step">Please complete this step before moving on</string>

    <!--Other -->
    <string name="rss_you_are_eligible">You are eligible to join the study!</string>
    <string name="rss_tap_below">Touch “NEXT” below to get started with the consent process.
    </string>
    <string name="rss_you_are_ineligible">Unfortunately, you are ineligible to join this study.
    </string>
    <string name="rss_sign_in">Sign In</string>
    <string name="rss_add_password_hint">add password</string>
    <string name="rss_password">Password</string>
    <string name="rss_male">Male</string>
    <string name="rss_female">Female</string>
    <string name="rss_weight_hint">add weight (lb)</string>
    <string name="rss_location_services">Location Services</string>
    <string name="rss_location_services_description">Using your GPS will allow the app to advise you
        of
        air quality in your area. Your actual location will never be shared.
    </string>
    <string name="rss_allow">Allow</string>
    <string name="rss_granted">Granted</string>
    <string name="rss_forgot_password">Forgot password</string>
    <string name="rss_participant">Participant</string>
    <string name="rss_btn_true">True</string>
    <string name="rss_btn_false">False</string>
    <string name="rss_eligibility">Eligibility</string>
    <string name="rss_sign_up">Sign Up</string>
    <string name="rss_ineligible">Ineligible</string>
    <string name="rss_registration">Registration</string>
    <string name="rss_additional_info">Additional Information</string>
    <string name="rss_thank_you">Thank you</string>
    <string name="rss_study_registration">Study Registration</string>
    <string name="rss_study_registration_desc">We will send an email to the address below to confirm
        your registration in the research study.
    </string>
    <string name="rss_study_registration_password">Create your study login password</string>
    <string name="rss_email_hint">name@example.com</string>
    <string name="rss_study_registration_password_hint">Enter password</string>
    <string name="rss_study_registration_username_hint">Enter username or email</string>
    <string name="rss_error_invalid_password">Invalid Password</string>
    <string name="rss_error_invalid_username">Username must be at least 6 characters</string>
    <string name="rss_error_invalid_email">Invalid Email</string>
    <string name="rss_wrong_email">Wrong email address? Tap here.</string>
    <string name="rss_once_verified">Once verified, tap below</string>
    <string name="rss_continue">Continue</string>
    <string name="rss_resend_email">Resend Verification Email</string>
    <string name="rss_email_verification_body">%1$s has send you a verification email at %2$s
    </string>
    <string name="rss_username">Username</string>
    <string name="rss_username_hint">username_123</string>
    <string name="rss_optional">Optional</string>
    <string name="rss_email_not_verified">Please check your email to verify your account before
        continuing
    </string>
    <string name="rss_change_email">Change Email</string>
    <string name="rss_quiz_question_disclamer">Please answer a few questions to ensure that you
        understand the consent form.
    </string>
    <string name="rss_passcode">Passcode</string>
    <string name="rss_passcode_create_title">Choose a passcode</string>
    <string name="rss_passcode_create_summary">Enter a secure code to protect your data and log in
        faster.
    </string>
    <string name="rss_passcode_confirm_title">Confirm your passcode</string>
    <string name="rss_passcode_confirm_summary">Enter your code one more time to confirm.</string>
    <string name="rss_passcode_confirm_error">That code doesn’t match the one you entered. Try again
        or go back to choose a different code.
    </string>
    <string name="rss_passcode_change_title">Change Passcode</string>
    <string name="rss_skip_signup">Skip Signup</string>

    <string name="rss_confirm">Confirm</string>
    <string name="rss_confirm_title">Check your email</string>
    <string name="rss_confirm_summary">We’ve emailed %1$s with a link to confirm your account. After
        visiting the link, come back and touch “continue” below.
    </string>
    <string name="rss_confirm_diff">ENTER A DIFFERENT EMAIL</string>
    <string name="rss_confirm_resend_email">Resend</string>
    <string name="rss_settings_reminders_title">Task reminders</string>
    <string name="rss_settings_reminders_summary">You’ll be reminded to complete tasks</string>
    <string name="rss_settings_dialog_leave_study">Are you sure you want to leave the study? This
        action cannot be undone and you will need to provide consent in order to re-enroll.
    </string>
    <string name="rss_quiz_evaluation_correct">That\'s Correct!</string>
    <string name="rss_quiz_evaluation_incorrect">That\'s Incorrect!</string>
    <string name="rss_quiz_question_explanation_correct">You are &lt;b>&lt;i>correct.&lt;/i>&lt;/b>
        %1$s
    </string>
    <string name="rss_quiz_question_explanation_incorrect">The correct answer is &lt;b>&lt;i>%1$s.&lt;/i>&lt;/b>
        %2$s
    </string>

    <!-- Network Errors -->
    <string name="rss_network_error_consent">Please review the consent documentation to continue participating in the study.</string>
    <string name="rss_network_error_consent_action">GO</string>
    <string name="rss_network_error_sign_in">Your account has been signed out, please sign in to continue</string>
    <string name="rss_network_error_sign_in_action">SIGN IN</string>
    <string name="rss_network_error_boom">Something happened with network, try again later</string>
    <string name="rss_network_error_unknown">Whoops! looks like something bad happened when talking
        to the server, try again later!
    </string>
    <string name="rss_unable_to_load_task">Unable to load the selected task</string>

    <!-- Permissions -->
    <string name="rss_permissions">Permissions</string>
    <string name="rss_permission_location_title">Location</string>
    <string name="rss_permission_location_desc">The app needs location permissions to show accurate
        location-based data</string>
    <string name="rss_permission_notification_title">Notifications</string>
    <string name="rss_permission_notification_desc">The app needs your permission in order to show
    notifications when you complete surveys. This permission is optional and can be enabled in
    the App\'s Settings screen.</string>
    <string name="rss_permission_notification_desc_long">This activity is serving as an example of
        how you would implement outside auth. In other words, this activity represents an 3rd party
        auth process like ones found in Google+, Google Drive, or Google Fit. This example is simple
        and the result only controls whether notifications will show .\n\nYou can still enable app
        notifications via the settings screen. The button for this screen is in the upper right hand
        corner of the main screen (gear icon).</string>
    <string name="rss_permission_disclaimer">Participation in the study requires some permissions
        from your device.
    </string>
    <string name="rss_permission_continue_invalid">Please allow %1$s permissions to continue.
    </string>

    <!-- Unknown -->


</resources>
