<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        style="@style/Backbone.Survey.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Credentials" />

    <TableLayout
        android:id="@+id/credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="@dimen/rsb_margin_left"
        android:layout_marginRight="@dimen/rsb_margin_right"
        android:layout_marginTop="@dimen/rsb_padding_wedge"
        android:stretchColumns="1">

        <TableRow
            android:gravity="center_vertical"
            android:minHeight="@dimen/rsb_item_size_default">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/rsb_padding_small"
                android:fontFamily="sans-serif-medium"
                android:gravity="right"
                android:text="@string/rss_username" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:hint="@string/rss_study_registration_username_hint"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:minHeight="@dimen/rsb_item_size_default">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginRight="@dimen/rsb_padding_small"
                android:fontFamily="sans-serif-medium"
                android:gravity="right"
                android:text="@string/rss_password" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:gravity="center_vertical"
                android:hint="@string/rss_study_registration_password_hint"
                android:inputType="textVisiblePassword"
                android:textSize="14sp" />

        </TableRow>

    </TableLayout>

    <org.researchstack.backbone.ui.views.SubmitBar
        android:id="@+id/submit_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:negativeActionTitle="@string/rsb_exit"
        app:positiveActionTitle="@string/rsb_submit" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/forgot_password"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/submit_bar"
        android:text="@string/rss_forgot_password"
        android:textColor="@color/rsb_submit_bar_negative" />

    <include
        android:id="@+id/progress"
        layout="@layout/rsb_progress"
        android:visibility="gone"
        tools:visibility="gone" />

</RelativeLayout>